--- a/_publications/chi2024.md
+++ b/_publications/chi2024.md
@@ -3,7 +3,8 @@ title: "Human-Algorithmic Interaction Using a Large Language Model-Augmented Art
 collection: publications
 category: manuscripts
 date: 2024-05-11
-authors: "Niroop Channa Rajashekar^*, Yeo Eun Shin^*, <u>Yuan Pu</u>^*, Sunny Chung, Kisung You, Mauro Giuffre, Colleen E Chan, Theo Saarinen, Allen Hsiao, Jasjeet Sekhon, Ambrose H Wong, Leigh V Evans, Rene F. Kizilcec, Loren Laine, Terika Mccall, Dennis Shung (^*: equal contributions)"
+authors: 'Niroop Channa Rajashekar<sup>*</sup>, Yeo Eun Shin<sup>*</sup>, <u>Yuan Pu</u><sup>*</sup>, Sunny Chung, Kisung You, Mauro Giuffre, Colleen E Chan, Theo Saarinen, Allen Hsiao, Jasjeet Sekhon, Ambrose H Wong, Leigh V Evans, Rene F. Kizilcec, Loren Laine, Terika Mccall, Dennis Shung'
+note: '(<sup>*</sup>: equal contributions)'
 venue: 'Proceedings of the CHI Conference on Human Factors in Computing Systems'
 paperurl: 'https://doi.org/10.1145/3613904.3642024'
 --- 
