--- a/_publications/chi2024.md
+++ b/_publications/chi2024.md
@@ -1,8 +1,9 @@
 ---
 title: "Human-Algorithmic Interaction Using a Large Language Model-Augmented Artificial Intelligence Clinical Decision Support System"
 collection: publications
-category: manuscripts
+category: conference
 date: 2024-05-11
+year: 2024
 authors: 'Niroop Channa Rajashekar<sup>*</sup>, Yeo Eun Shin<sup>*</sup>, <u>Yuan Pu</u><sup>*</sup>, Sunny Chung, Kisung You, Mauro Giuffre, Colleen E Chan, Theo Saarinen, Allen Hsiao, Jasjeet Sekhon, Ambrose H Wong, Leigh V Evans, Rene F. Kizilcec, Loren Laine, Terika Mccall, Dennis Shung'
 note: '(<sup>*</sup>: equal contributions)'
 venue: 'Proceedings of the CHI Conference on Human Factors in Computing Systems'
