--- a/_publications/CHI2024.md
+++ b/_publications/CHI2024.md
@@ -7,5 +7,6 @@ year: 2024
 authors: 'Niroop Channa Rajashekar<sup>*</sup>, Yeo Eun Shin<sup>*</sup>, <u>Yuan Pu</u><sup>*</sup>, Sunny Chung, Kisung You, Mauro Giuffre, Colleen E Chan, Theo Saarinen, Allen Hsiao, Jasjeet Sekhon, Ambrose H Wong, Leigh V Evans, Rene F. Kizilcec, Loren Laine, Terika Mccall, Dennis Shung'
 venue: 'CHI 2024'
 paperurl: 'https://doi.org/10.1145/3613904.3642024'
+slidesurl: 'https://drive.google.com/file/d/13go_li2Asvqjot1L6DWGvdP9BJ5rJ7Ap/preview'
 labels: ["Human-Computer Interaction", "Clinical Decision Support"]
 --- 
